force-app/main/default/objects/Merchandising__c/Merchandising__c.object-meta.xml
<CustomObject>
    <label>Merchandising</label>
    <pluralLabel>Merchandisings</pluralLabel>
    <nameField>
        <label>Merchandising Number</label>
        <type>AutoNumber</type>
        <displayFormat>MER-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Shelf and display audit tracking for outlet merchandising compliance and share of shelf measurement (MOD-04 Outlet Visit Execution)</description>
</CustomObject>