force-app/main/default/objects/Merchandising__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchandisings</relationshipLabel>
    <relationshipName>Merchandisings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>