force-app/main/default/objects/Merchandising__c/fields/Competitor_Shelf_Share__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Shelf_Share__c</fullName>
    <label>Competitor Shelf Share</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>