force-app/main/default/objects/Merchandising__c/fields/Own_Shelf_Share__c.field-meta.xml
<CustomField>
    <fullName>Own_Shelf_Share__c</fullName>
    <label>Own Shelf Share</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>