force-app/main/default/objects/Merchandising__c/fields/Photo_After__c.field-meta.xml
<CustomField>
    <fullName>Photo_After__c</fullName>
    <label>Photo After</label>
    <type>Url</type>
</CustomField>