force-app/main/default/objects/Merchandising__c/fields/Photo_Before__c.field-meta.xml
<CustomField>
    <fullName>Photo_Before__c</fullName>
    <label>Photo Before</label>
    <type>Url</type>
</CustomField>