force-app/main/default/objects/Merchandising__c/fields/POSM_Condition__c.field-meta.xml
<CustomField>
    <fullName>POSM_Condition__c</fullName>
    <label>POSM Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>