force-app/main/default/objects/Merchandising__c/fields/POSM_Present__c.field-meta.xml
<CustomField>
    <fullName>POSM_Present__c</fullName>
    <label>POSM Present</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>