force-app/main/default/objects/Merchandising__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <type>Lookup</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Merchandisings</relationshipLabel>
    <relationshipName>Merchandisings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>